--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -56,7 +56,7 @@
       </div>
       <!-- project body -->
       <h3>
-        {{ project.title }}
+        &lt; {{ project.title }} &gt;
 
         <p>{{ project.description }}</p>
         <p class="project__date">
