--- a/src/app/modals/addproject/addproject.component.html
+++ b/src/app/modals/addproject/addproject.component.html
@@ -110,9 +110,17 @@
         <br />
         <!--  -->
 
-        <div class="input-group">
+        <div class="input-group mb-3">
           <span class="input-group-text">descripcion del proyecto</span>
-          <textarea class="form-control" aria-label="With textarea"></textarea>
+          <textarea
+            class="form-control"
+            aria-label="With textarea"
+            formControlName="description"
+            [ngClass]="{
+              'border-danger': Description.errors && Description.touched,
+              'border-good': !Description.errors && Description.touched
+            }"
+          ></textarea>
         </div>
         <!-- logica dato -->
         <div *ngIf="Description?.errors && Description?.touched">
@@ -122,7 +130,6 @@
         </div>
         <br />
         <!--  -->
-
         <!-- footer -->
         <div class="modal-footer">
           <button
@@ -130,6 +137,10 @@
             class="btn btn-secondary"
             data-bs-dismiss="modal"
             (click)="clear()"
+          >
+            cerrar
+          </button>
+          <input
             [disabled]="
               Url?.hasError('required') ||
               Title?.hasError('required') ||
@@ -137,10 +148,6 @@
               End?.hasError('required') ||
               Description?.hasError('required')
             "
-          >
-            cerrar
-          </button>
-          <input
             type="submit"
             class="btn btn-primary"
             value="guardar cambios"
