--- a/src/app/modals/addskill/addskill.component.html
+++ b/src/app/modals/addskill/addskill.component.html
@@ -45,6 +45,7 @@
             aria-label="percentage number"
             placeholder="porcentaje de dominio de la habilidad"
             formControlName="percentage"
+            max="100"
             [ngClass]="{
               'border-danger': Percentage.errors && Percentage.touched,
               'border-good': !Percentage.errors && Percentage.touched
@@ -57,11 +58,11 @@
           <p *ngIf="Percentage?.hasError('required')" class="error">
             El dato es requerido.
           </p>
-
+          <p *ngIf="Percentage?.hasError('max')" class="error">
+            Valor maximo: 100
+          </p>
         </div>
         <br />
-
-        <!--  -->
         <!-- footer -->
         <div class="modal-footer">
           <button
@@ -69,9 +70,6 @@
             class="btn btn-secondary"
             data-bs-dismiss="modal"
             (click)="clear()"
-            [disabled]="
-              Name?.hasError('required') || Percentage?.hasError('required')
-            "
           >
             cerrar
           </button>
@@ -79,6 +77,11 @@
             type="submit"
             class="btn btn-primary"
             value="guardar cambios"
+            [disabled]="
+              Name?.hasError('required') ||
+              Percentage?.hasError('required') ||
+              Percentage?.hasError('max')
+            "
             (click)="refresh()"
           />
         </div>
