--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import url("https://necolas.github.io/normalize.css/8.0.1/normalize.css");
 
-@import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
-
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap');
-
-
+@import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap");
 
 /* changing how padding is calculated */
 *,
@@ -14,37 +11,36 @@
   box-sizing: border-box;
 }
 /* custom properties */
-:root{
-  --ff-primary : 'Inconsolata', sans-serif;
-  --ff-secondary : 'Inconsolata', monospace;
+:root {
+  --ff-primary: "Inconsolata", sans-serif;
+  --ff-secondary: "Inconsolata", monospace;
 
   --fw-reg: 300;
   --fw-bold: 900;
 
   --clr-light: #fff;
-  --clr-dark:#1f2029;
-  --clr-accent:#009188;
+  --clr-dark: #1f2029;
+  --clr-accent: #009188;
 
-
-  --fs-h1:2.75rem;
+  --fs-h1: 2.75rem;
   --fs-h2: 2.25rem;
   --fs-h3: 1.25rem;
   --fs-body: 1rem;
-  
-  --default:100%;
-  --border:none;
+
+  --default: 100%;
+  --border: none;
   /* crear variables nuevas para tamaño de margen segun tamaño de la pantalla */
 }
 /* review */
-@media(min-width: 965px){
-  :root{
+@media (min-width: 965px) {
+  :root {
     /* --fs-h1: 3.5rem;
     --fs-h2:2.75rem;
     --fs-h3:1.5rem;
     --fs-body:1.25rem; */
 
-    --default:50%;
-    --border:solid;
+    --default: 50%;
+    --border: solid;
   }
 }
 
@@ -52,31 +48,28 @@
 
 body {
   background-color: var(--clr-dark);
-  color: var( --clr-light);
+  color: var(--clr-light);
   margin: 0;
   font-family: var(--ff-primary);
-  font-size: var(--fs-body); 
+  font-size: var(--fs-body);
   line-height: 1.6;
 }
 section {
   padding: 2em 2em;
 }
-img{
+img {
   display: block;
   max-width: 100%;
-
 }
-
 
 /* ------------------ */
 
-
 a {
-	cursor: pointer;
+  cursor: pointer;
   transition: all 200ms linear;
 }
 a:hover {
-	text-decoration: none;
+  text-decoration: none;
 }
 .link {
   color: #c4c3ca;
@@ -86,92 +79,88 @@ a:hover {
 }
 p {
   font-weight: 500;
-  word-wrap: break-word;  
-    color: var( --clr-light);
-    margin: 0;
-    font-family: var(--ff-primary);
-    font-size: var(--fs-body); 
-    line-height: 1.6;
-  
+  word-wrap: break-word;
+  word-break: break-all;
+  color: var(--clr-light);
+  margin: 0;
+  font-family: var(--ff-primary);
+  font-size: var(--fs-body);
+  line-height: 1.6;
 }
-h1 span{
-    padding: 0 20px;
-    text-transform: uppercase;
-    font-weight: 700;
-  }
+h1 span {
+  padding: 0 20px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
 h4 {
   font-weight: 600;
 }
-h6 span{
+h6 span {
   padding: 0 20px;
   text-transform: uppercase;
   font-weight: 700;
 }
 /* buttons */
-.btn{  
-    border-radius: 2rem; /* alt  4px */
-    height: 44px;
-    font-size: 13px;
-    font-weight: 600;
-    text-transform: uppercase;
-    -webkit-transition : all 200ms linear;
-    transition: all 200ms linear;
-    padding: 0 30px;
-    letter-spacing: 1px;
-    display: inline-flex;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    -ms-align-items: center;
-    align-items: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    -ms-justify-content: center;
-    justify-content: center;
-    -ms-flex-pack: center;
-    text-align: center;
-    border: none;
-    background-color: #009188;
-    color: var(--clr-light);
-    box-shadow: 0 8px 24px 0 rgba(255,235,167,.2);
-  }
+.btn {
+  border-radius: 2rem; /* alt  4px */
+  height: 44px;
+  font-size: 13px;
+  font-weight: 600;
+  text-transform: uppercase;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  padding: 0 30px;
+  letter-spacing: 1px;
+  display: inline-flex;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  text-align: center;
+  border: none;
+  background-color: #009188;
+  color: var(--clr-light);
+  box-shadow: 0 8px 24px 0 rgba(255, 235, 167, 0.2);
+}
 
+.btn a {
+  height: 100%;
+  font-size: 2rem;
+}
 
-  .btn a {
+a i {
+  width: 100%;
+  color: var(--clr-light);
+}
+a i:hover {
+  color: #009188;
+}
 
-    height: 100%;
-    font-size: 2rem;
+.btn:active,
+.btn:focus {
+  background-color: var(--clr-light);
+  color: #009188;
+  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
+}
+.btn:hover {
+  background-color: var(--clr-light);
+  color: #009188;
+  box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
+}
+.btn i:hover {
+  background-color: var(--clr-light);
+  color: #009188;
+}
 
-  }
-
-  a i{
-    width: 100%;
-    color: var(--clr-light);
-  }
-  a i:hover{
-    color: #009188;
-  }
-
-  
-  .btn:active,
-  .btn:focus{  
-    background-color: var(--clr-light);
-    color:#009188;
-    box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
-  }
-  .btn:hover{  
-    background-color: var(--clr-light);
-    color: #009188;
-    box-shadow: 0 8px 24px 0 rgba(16,39,112,.2);
-  }
- .btn i:hover{  
-    background-color: var(--clr-light);
-    color: #009188;
-  }
-
-.add-btn{
+.add-btn {
   border-radius: 1rem;
   padding: 1rem;
-  width:5%;
+  width: 5%;
   height: 0.1rem;
   font-style: italic;
   color: rgb(255, 255, 255);
@@ -179,37 +168,48 @@ h6 span{
   background-color: var(--clr-accent);
 }
 
-  .edit-btn{
-    border-radius: 1rem;
-    padding: 1rem;
-    width:5%;
-    height: 0.1rem;
-    color: rgb(255, 255, 255);
-    box-shadow: #fff;
-    background-color: rgb(55, 133, 113);
+.edit-btn {
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 5%;
+  height: 0.1rem;
+  color: rgb(255, 255, 255);
+  box-shadow: #fff;
+  background-color: rgb(55, 133, 113);
+}
+.del-btn {
+  border-radius: 1rem;
+  padding: 1rem;
+  width: 10%;
+  width: 5%;
+  height: 0.1rem;
+  color: rgb(255, 255, 255);
+  box-shadow: #fff;
+  background-color: rgb(160, 57, 57);
+}
 
-  }
-  .del-btn{
-    border-radius: 1rem;
-    padding: 1rem;
-    width:10%;
-    width:5%;
-    height: 0.1rem;
-    color: rgb(255, 255, 255);
-    box-shadow: #fff;
-    background-color: rgb(160, 57, 57);
-
-  }
-
-  .btn-close{
-    color: var(--clr-light);
-  }
-
+.btn-close {
+  color: var(--clr-light);
+}
+button[disabled]:active, button[disabled],
+input[type="button"][disabled]:active,
+input[type="button"][disabled],
+input[type="submit"][disabled]:active,
+input[type="submit"][disabled] ,
+button[disabled]:hover,
+input[type="button"][disabled]:hover,
+input[type="submit"][disabled]:hover
+{
+  border: 2px outset ButtonFace;
+  color: GrayText;
+  cursor: inherit;
+  background-color: #ddd;
+  background: #ddd;
+}
 /* ------------------------------------------ */
 
-strong{
+strong {
   font-weight: var(--fw-bold);
-
 }
 /* typography --- maybe check de margin***** */
 h1,
@@ -222,29 +222,32 @@ h4 {
   line-height: 1;
   margin: 0;
 }
-h1{ font-size: var(--fs-h1)}
-h2{ font-size: var(--fs-h2)}
-h3{ font-size: var(--fs-h3)}
+h1 {
+  font-size: var(--fs-h1);
+}
+h2 {
+  font-size: var(--fs-h2);
+}
+h3 {
+  font-size: var(--fs-h3);
+}
 
 .icon-body {
   color: var(--clr-accent);
 }
 
-.section__title{
+.section__title {
   margin-bottom: 0.9em;
   display: flex;
   justify-content: space-between;
 }
 
-
-
-.section__subtitle{
+.section__subtitle {
   margin: 0;
   font-size: var(--fs-h3);
-
 }
 .section__subtitle--intro,
-.section__subtitle--about{
+.section__subtitle--about {
   background-color: var(--clr-accent);
   font-family: var(--ff-primary);
   margin-bottom: 1em;
@@ -252,45 +255,46 @@ h3{ font-size: var(--fs-h3)}
 
 /* modals */
 
-.modal-content{
+.modal-content {
   padding: 1em;
   border-width: 0.1%;
 
   border-color: transparent;
-  background-color:var(--clr-dark)
+  background-color: var(--clr-dark);
 }
 .modal-header,
-.modal-footer{
+.modal-footer {
   border: none;
 }
 
-
 /* project-date is used for all dates in every category */
-.project__date{
+.project__date {
   display: flex;
   flex-direction: row-reverse;
   font-style: italic;
   color: rgb(177, 174, 174);
-  }
+}
 
 .about-me__footer,
 .my-experience__footer,
 .my-education__footer,
 .my-skills__footer,
-.my-projects__footer{
+.my-projects__footer {
   padding: 2em;
-display: flex;
-flex-direction: row-reverse;
+  display: flex;
+  flex-direction: row-reverse;
 
   /* change opacity of the footers */
 }
-.error{
+.error {
   color: rgb(160, 57, 57);
 }
 
-.border-danger{
+.border-danger {
+  border-width: 2px;
   border-color: rgb(160, 57, 57);
 }
-.border-good{
+.border-good {
+  border-width: 2px;
   border-color: rgb(1, 160, 1);
 }
